@@ -738,5 +738,5 @@
     "*://*.wallkit.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.9.1"
+  "version": "3.1.9.2"
 }
