@@ -3,7 +3,9 @@ Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
 Add GauchaZH
+Add VmnMedia.nl Group (opt-in to custom sites)
 Remove Weltkunst.de (fix obsolete)
+Fix The Athletic (Kiwi)
 
 * v3.1.9.0 (2023-05-21)
 Remove (custom) Substack (fix obsolete)
